src/tests/fixtures/field_definitions/FieldDefinedOnNonGqlType.ts.expected
-----------------
INPUT
----------------- 
class Foo {
  /** @gqlField */
  field: string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/FieldDefinedOnNonGqlType.ts:2:8 - error: Unexpected `@gqlField`. The parent construct must be either a `@gqlType` or `@gqlInterface` tag. Are you missing one of these tags?

2   /** @gqlField */
         ~~~~~~~~
